# cpp_examples

boost/: CMakeLists.txt  boost_options.cpp
composition&template/: main.cpp  mytype.hpp  readfile.cpp  readfile.hpp  taction.hpp  tst  wrapthread.hpp
composition&template&thread/: helplock.hpp  log.txt  main.cpp  masterthread.hpp  mytype.hpp  readfile.cpp  readfile.hpp  slavethread.hpp  taction.hpp  transformline.cpp  transformline.hpp  tst
find_regex_substr/: find_regex_substring.cpp  tst
gtest/: CMakeLists.txt  readme.txt  tests.cpp
multithread_read_transform_print/: main.cpp  mtransform.cpp  mtransform.hpp  tst
multithread_read_write/: mtransform.cpp  mtransform.hpp  read.txt
multithreaded_logger/: log.txt  main.cpp  mlogger.cpp  mlogger.hpp  tst
mydefine/: mydefine.hpp
par_transform/: CMakeLists.txt  main.cpp  tst
test/: MLogger.cpp  MLogger.hpp  main.cpp  tst
